allow to retrive several checked settings, and selecting settings together

--- a/popup.html
+++ b/popup.html
@@ -8,15 +8,17 @@
     <script type="text/javascript" src="popup.js"></script>
   </head>
   <body id="main">    
-    <div id="div-activity-broadcasts">
+    <div id="div-all-settings">
       <fieldset>
-        <legend>Refresh your activity broadcasts:</legend>
+        <legend>Profile Settings: </legend>
         <p>
-          <div id="insert-activity-broadcasts"></div>
+          <div id="div-activity-broadcasts"></div>
+          <div id="div-browseparam-browsemap"></div>
+          <div id="div-activityfeed-activityfeed"></div>
         </p>
-        <input type="button" id="btn-get-activity-broadcasts" name="get-activitysubmit" value="Collect Your Settings">
-        <input type="button" id="btn-set-activity-broadcasts" name="set-activitysubmit" value="Submit Your Settings">
       </fieldset>
+      <input type="button" id="btn-get-all-settings" name="get-all-settings" value="Collect Your Settings">
+      <input type="button" id="btn-set-all-settings" name="set-all-settings" value="Submit Your Settings">
     </div>
 
     <div id="div-set-global-level">
