working version: only send xmlhttp requests if settings changed

--- a/popup.html
+++ b/popup.html
@@ -13,9 +13,26 @@
       <fieldset>
         <legend>Profile Settings: </legend>
           <div id="div-activity-broadcasts"></div>
-          <div id="div-browseparam-browsemap"></div>
-          <div id="div-activityfeed-activityfeed"></div>
+          <div id="div-browse-map"></div>
+          <br />
+          <div id="div-activity-visibility"></div>
+          <br />
+          <div id="div-connection-visibility"></div>
       </fieldset>
+      <br />
+      <fieldset>
+        <legend>Email Settings: </legend>
+          <div id="div-li-announcements"></div>
+          <div id="div-research-invitations"></div>
+          <div id="div-partner-inmail-marketing"></div>
+          <div id="div-partner-inmail-hiring"></div>
+      </fieldset>
+      <br />
+      <fieldset>
+        <legend>Account Settings: </legend>
+          <div id="div-profile-photo-visibility"></div>
+      </fieldset>
+      <br />
       <input type="button" id="btn-get-all-settings" name="get-all-settings" value="Load Your Settings">
       <input type="button" id="btn-set-all-settings" name="set-all-settings" value="Submit Your Settings">
     </div>
