move variables to settings.js

--- a/popup.html
+++ b/popup.html
@@ -5,6 +5,7 @@
     <link type="text/css" href="jquery-ui/css/smoothness/jquery-ui-1.8.21.custom.css" rel="stylesheet" />
     <link href="popup.css" rel="stylesheet" type="text/css">
     <script type="text/javascript" src="jquery-ui/js/jquery-1.7.2.min.js"></script>
+    <script type="text/javascript" src="settings.js"></script>
     <script type="text/javascript" src="popup.js"></script>
   </head>
   <body id="main">
