worked version; allow to choose recommend settings, fully workable

--- a/popup.html
+++ b/popup.html
@@ -34,8 +34,11 @@
           <div id="div-profile-photo-visibility"></div>
       </fieldset>
       <br />
-      <input type="button" id="btn-get-all-settings" name="get-all-settings" value="Load Your Settings">
-      <input type="button" id="btn-set-all-settings" name="set-all-settings" value="Submit Your Settings">
+      <div id="div-setting-buttons">
+        <input type="button" id="btn-get-all-settings" name="get-all-settings" value="Load Settings">
+        <input type="button" id="btn-recommend-all-settings" name="set-all-settings" value="Recommend Settings">
+        <input type="button" id="btn-set-all-settings" name="set-all-settings" value="Submit Changes">
+      </div>
     </div>
 
     <div id="div-set-global-level" style="display:none">
