workable versions, use settimer to wait for auto-submit settings when popup open

--- a/popup.html
+++ b/popup.html
@@ -9,7 +9,9 @@
     <script type="text/javascript" src="popup.js"></script>
   </head>
   <body id="main">
-    <div id="div-error-messages"></div> <br /> <br />
+    <h3> One-Click LinkedIn Privacy Settings </h3> <br />
+    <div id="div-progress-messages"></div>
+    <div id="div-error-messages"></div>
     <div id="div-all-settings">
       <fieldset>
         <legend>Profile Settings: </legend>
@@ -17,7 +19,6 @@
           <div id="div-browse-map"></div>
           <br />
           <div id="div-activity-visibility"></div>
-          <br />
           <div id="div-connection-visibility"></div>
       </fieldset>
       <br />
