add Tweet button on the page; facebook share conflict with tweet under similar javascript function

--- a/popup.html
+++ b/popup.html
@@ -51,7 +51,12 @@
         <input type="button" id="btn-set-global-level" name="set-global-submit" value="Submit">
       </fieldset>
     </div>
-
+    
+    <div id="div-social-share">
+    <br />
+      <a href="https://twitter.com/intent/tweet" class="twitter-share-button" data-text="#OneClickSettings fixed my LinkedIn Privacy settings to prevent company espionage. " data-lang="en" data-size="large" data-hashtags="BarracudaLabs" data-url="http://chrome.google.com/webstore" data-related="Barracuda,BarracudaLabs,copyapp">Tweet</a>
+    <br />
+    </div>
     
     <div id="debug-form"  style="display:none">
       <fieldset>
