workable version, using jquery to send/receive requests

--- a/popup.html
+++ b/popup.html
@@ -26,6 +26,7 @@
       <div class="tab-content">
         <div id="home-menu" class="tab-pane active">
           <div id="div-home-message"> </div>
+          <div id="div-home-fix-message"> <div class='alert'> Fix your settings with our recommendation <input type='button' id='btn-set-recommend-settings' name='set-all-setting' value='Fix It'> </div></div>
         </div>
 
         <div id="div-all-settings" class="tab-pane">
@@ -53,7 +54,7 @@
             <input type="button" id="btn-get-all-settings" name="get-all-settings" value="Load Settings">
             <input type="button" id="btn-recommend-all-settings" name="set-all-settings" value="Recommend Settings">
             <input type="button" id="btn-set-all-settings" name="set-all-settings" value="Submit Changes">
-            <input type="button" id="btn-delete-local-storage" name="Delete Local Storages" value="Delete Storage">
+            <input type="button" id="btn-delete-local-storage" name="Delete Local Storages" value="Delete Storage" style="display:none">
           </div>
         </div>           
       </div>
