--- a/popup.html
+++ b/popup.html
@@ -54,7 +54,7 @@
             <input type="button" id="btn-get-all-settings" name="get-all-settings" value="Load Settings">
             <input type="button" id="btn-recommend-all-settings" name="set-all-settings" value="Recommend Settings">
             <input type="button" id="btn-set-all-settings" name="set-all-settings" value="Submit Changes">
-            <input type="button" id="btn-delete-local-storage" name="Delete Local Storages" value="Delete Storage" style="display:none">
+            <input type="button" id="btn-delete-local-storage" name="Delete Local Storages" value="Delete Storage" style="display:show">
           </div>
         </div>           
       </div>
