workable version; hacked the auto-detecting if user change settings on the web, showing warning messages; auto-run on first time

--- a/popup.html
+++ b/popup.html
@@ -26,7 +26,7 @@
       <div class="tab-content">
         <div id="home-menu" class="tab-pane active">
           <div id="div-home-message"> </div>
-          <div id="div-home-fix-message"> <div class='alert'> Fix your settings with our recommendation <input type='button' id='btn-set-recommend-settings' name='set-all-setting' value='Fix It'> </div></div>
+          <div id="div-home-fix-message"> </div>
         </div>
 
         <div id="div-all-settings" class="tab-pane">
