--- a/popup.html
+++ b/popup.html
@@ -12,13 +12,14 @@
   </head>
   <body id="main">
       <ul class="nav nav-tabs" id="myTab">
-        <li id="about-toolbar"><div><h3>One-Click Settings</h3></div></li>
+        <li id="about-toolbar"><div style='width: 80px; margin-left: 5px; line-height: 20px;'><b>One-Click Settings</b></div></li>
+        <li id="about-toolbar"><div><img src='images/icon48.png' /></div></li>
         <li id="none-toolbar"><a href="#none-menu" data-toggle="tab"></a></li>
         <li id="home-toolbar" class="active"><a href="#home-menu" data-toggle="tab">Home</a></li>
         <li id="customize-toolbar"><a href="#div-all-settings" id="customize-tab-href" >Customize</a></li>
         <li id="social-toolbar" style="float:right;">
           <div id="div-social-share" style="margin-top: 6px;">
-            <a href="https://twitter.com/intent/tweet" class="twitter-share-button" data-text="#OneClickSettings fixed my LinkedIn Privacy settings to prevent company espionage. " data-lang="en" data-size="large" data-hashtags="BarracudaLabs" data-url="http://chrome.google.com/webstore" data-related="Barracuda,BarracudaLabs,copyapp">Tweet</a>
+            <a href="https://twitter.com/intent/tweet" class="twitter-share-button" data-text="#OneClickSettings fixed my LinkedIn Privacy settings to prevent company espionage. " data-lang="en" data-size="large" data-hashtags="BarracudaLabs" data-url="https://chrome.google.com/webstore/search/One-Click%20LinkedIn%20Privacy%20Settings" data-related="Barracuda,BarracudaLabs,Security">Tweet</a>
           </div>
         </li>
       </ul>
