add extra options for photo visibility

--- a/popup.html
+++ b/popup.html
@@ -42,6 +42,7 @@
               <div id="div-activity-broadcasts"></div>
               <div id="div-browse-map"></div>
               <div id="div-activity-visibility"></div>
+              <div id="div-edit-picture-info"></div>
               <div id="div-connection-visibility"></div>
           </fieldset>
           <fieldset>
@@ -51,6 +52,7 @@
           </fieldset>
           <fieldset>
             <legend>Email Settings: </legend>
+              <label> I would like to receive(check all that apply):</label>
               <div id="div-li-announcements"></div>
               <div id="div-research-invitations"></div>
               <div id="div-partner-inmail-marketing"></div>
