--- a/popup.html
+++ b/popup.html
@@ -33,7 +33,7 @@
           <div id="div-customize-message"></div>
           <div id="div-setting-buttons"style="margin-top: 6px;">
             <input type="button" id="btn-get-all-settings" name="get-all-settings" value="Load Settings">
-            <input type="button" id="btn-recommend-all-settings" name="set-all-settings" value="Recommend Settings">
+            <input type="button" id="btn-recommend-all-settings" name="set-all-settings" value="Recommend Choices">
             <input type="button" id="btn-set-all-settings" name="set-all-settings" value="Submit Changes">
             <input type="button" id="btn-delete-local-storage" name="Delete Local Storages" value="Delete Storage" style="display:none">
           </div>
