LinkedIn menu bar changed; have to change csrftoken xpath, inject html etc

--- a/popup.html
+++ b/popup.html
@@ -35,7 +35,7 @@
             <input type="button" id="btn-get-all-settings" name="get-all-settings" value="Load Settings">
             <input type="button" id="btn-recommend-all-settings" name="set-all-settings" value="Recommend Choices">
             <input type="button" id="btn-set-all-settings" name="set-all-settings" value="Submit Changes">
-            <input type="button" id="btn-delete-local-storage" name="Delete Local Storages" value="Delete Storage" style="display:none">
+            <input type="button" id="btn-delete-local-storage" name="Delete Local Storages" value="Delete Storage" style="display:show">
           </div>
           <fieldset>
             <legend>Profile Settings: </legend>
