fix the twitter share information with official chrome store url

--- a/popup.html
+++ b/popup.html
@@ -20,7 +20,7 @@
         <li id="customize-toolbar"><a href="#div-all-settings" id="customize-tab-href" >Customize</a></li>
         <li id="social-toolbar" style="float:right;">
           <div id="div-social-share" style="margin-top: 6px;">
-            <a href="https://twitter.com/intent/tweet" class="twitter-share-button" data-text="#OneClickSettings fixed my LinkedIn Privacy settings to prevent company espionage." data-lang="en" data-size="large" data-hashtags="BarracudaLabs" data-url="https://chrome.google.com/webstore/search/One-Click%20LinkedIn%20Privacy%20Settings" data-related="Barracuda,BarracudaLabs">Tweet</a>
+            <a href="https://twitter.com/intent/tweet" class="twitter-share-button" data-text="#OneClickSettings fixed my LinkedIn Privacy settings to prevent company espionage." data-lang="en" data-size="large" data-hashtags="BarracudaLabs" data-url="https://chrome.google.com/webstore/detail/one-click-linkedin-privac/ndbgecgajaalmppafcopncbpblkgikif/" data-related="Barracuda,BarracudaLabs">Tweet</a>
           </div>
         </li>
       </ul>
