update name to Barracuda Profile Protector

--- a/popup.html
+++ b/popup.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta name="twitter:widgets:csp" content="on"> 
-    <title>One Click LinkedIn Privacy Settings</title>
+    <title>Barracuda Profile Protector for LinkedIn</title>
     <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
     <link href="popup.css" rel="stylesheet" type="text/css">
     <script type="text/javascript" src="js/jquery-1.7.2.min.js"></script>
@@ -13,14 +13,14 @@
   </head>
   <body id="main">
       <ul class="nav nav-tabs" id="myTab">
-        <li id="about-toolbar"><div style='width: 80px; margin-left: 5px; line-height: 20px;'><b>One-Click Settings</b></div></li>
+        <li id="about-toolbar"><div style='width: 80px; margin-left: 5px; line-height: 20px;'><b>Barracuda Profile Protector</b></div></li>
         <li id="about-toolbar"><div><img src='img/icon48.png' /></div></li>
         <li id="none-toolbar"><a href="#none-menu" data-toggle="tab"></a></li>
         <li id="home-toolbar" class="active"><a href="#home-menu" data-toggle="tab">Home</a></li>
         <li id="customize-toolbar"><a href="#div-all-settings" id="customize-tab-href" >Customize</a></li>
         <li id="social-toolbar" style="float:right;">
           <div id="div-social-share" style="margin-top: 6px;">
-            <a href="https://twitter.com/intent/tweet" class="twitter-share-button" data-text="#OneClickSettings fixed the privacy settings for my LinkedIn account to prevent company espionage." data-lang="en" data-size="large" data-hashtags="BarracudaLabs" data-url="https://chrome.google.com/webstore/detail/one-click-privacy-setting/ndbgecgajaalmppafcopncbpblkgikif"
+            <a href="https://twitter.com/intent/tweet" class="twitter-share-button" data-text="Barracuda Profile Protector for LinkedIn fixed my LinkedIn settings to prevent company espionage." data-lang="en" data-size="large" data-hashtags="BarracudaLabs" data-url="https://chrome.google.com/webstore/detail/ndbgecgajaalmppafcopncbpblkgikif"
              data-related="Barracuda,BarracudaLabs">Tweet</a>
           </div>
         </li>
